
Changes in version 0.6.1

- Added option description string to configuration parameters
- Fixed bug where EVENTS_TO_KEEP actually kept 1 less than specified
- Start all 3 high resolution system timers

Changes in version 0.6.0

- Added PutCalib method to JCalibration
- Added jcalibcopy utility
- Added GetMultiple methods to JCalibration and JCalibrationXML
- Nearly complete rewrite of JStreamLog and JStreamLogBuffer classes
  many JANA messages now sent through them. Removed JLog class.
- Added NTHREADS config. parameter which can be set to "Ncores"
- Added AddLog,GetLog,GetSingle, and GetSingleT methods to JObject
- Fixed bug with config. parameters containing white space being truncated
- Link JANA library to all plugins (needed for gcc4.4 on F11)
- Added WRITEOUT config. parameter to janaroot plugin to allow user 
  specification of which factories to write out.
- Added JANAROOT_MAX_OBJECTS config. parameter to janaroot
- Added high resolution timer for recording event processing time in 
  single threads

Changes in version 0.5.3

- Fixed bug that caused seg. faults due to double free in SetDefaultParameter
- Added RootSpy utility and plugin


Changes in version 0.5.2

- Fixed bug where calibrations and configurations were always being
  dumped at the end of the job.
- Added default_value field to JParameter and improved bookkeeping of
  isdefault and hasdefault values
- Move printing of configuration parameters to after the first event
- Fixed printing of rate average to not include first Nthreads events
  which can be much slower due to initializations
- Made Init, Run, Fini, ... methods vitural
- Added crypto libraries to gSOAP Makefile

Changes in version 0.5.1

- Fixed bug introduced with 0.5.0 where JEventLoop was not
  getting properly initialized for GUI's
- Fixed bug where call stack recording did not record the
  DEFTAG replacement tag
- Add percentage of total processing time to janadot output


Changes in version 0.5.0
